add first payment version
